workloads/amd64/daemonset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-daemonset
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.25
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.25
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.25
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test-daemonset
  namespace: test-daemonset
spec:
  selector:
    matchLabels:
      k8s-app: test-daemonset
  template:
    metadata:
      labels:
        k8s-app: test-daemonset
    spec:
      containers:
        - name: webserver
          image: rancher/mirrored-library-nginx:1.27.2-alpine
          ports:
          - containerPort: 8080
