workloads/amd64/metrics-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-metrics-server
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.25
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.25
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-metrics-server
  namespace: test-metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: nginx-app-metrics-server
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: nginx-app-metrics-server
    spec:
      containers:
        - name: nginx
          image: ranchertest/mytestcontainer:unprivileged
          ports:
            - containerPort: 8080
