workloads/amd64/dualstack-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc-demo
  labels:
    app: clusterip-demo
spec:
  ipFamilyPolicy: PreferDualStack
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
      protocol: TCP
  selector:
    app: clusterip-demo
---
apiVersion: v1
kind: Pod
metadata:
  name: clusterip-pod-demo
  labels:
    app: clusterip-demo
spec:
  containers:
  - name: nginx-container
    image: nginx
