workloads/amd64/dualstack-multi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: MyDualApp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: MyDualApp
  template:
    metadata:
      labels:
        app: MyDualApp
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-v4
spec:
  selector:
    app: MyDualApp
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-v6
spec:
  selector:
    app: MyDualApp
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-require-dual
spec:
  selector:
    app: MyDualApp
  ipFamilyPolicy: RequireDualStack
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-prefer-dual
spec:
  selector:
    app: MyDualApp
  ipFamilyPolicy: PreferDualStack
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
