workloads/amd64/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.25
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.25
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.25
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-backends
  namespace: test-ingress
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test-ingress
spec:
  rules:
  - host: foo1.bar.com
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-ingress-svc
 namespace: test-ingress
 labels:
   k8s-app: nginx-app-ingress
spec:
 ports:
 - port: 8080
   targetPort: 8080
   protocol: TCP
   name: http
 selector:
   k8s-app: nginx-app-ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: test-ingress
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
---
