workloads/amd64/k3s_issue_10053_netpol.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-k3s-issue-10053
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.25
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.25
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.25
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: example
  namespace: test-k3s-issue-10053
spec:
  podSelector:
    matchLabels:
      role: server
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 80
      protocol: TCP
